--- a/src/app/components/usar-biblioteca-route/usar-biblioteca-route.component.html
+++ b/src/app/components/usar-biblioteca-route/usar-biblioteca-route.component.html
@@ -42,10 +42,10 @@
       
       <div class="row">
           <div class="col-lg-4 mb-2" *ngFor="let book of books">
-            <div class="card pb-4" style="height: 600px;">
-              <img [src]="'https://193.136.62.24/v1/assets/cover/' + book.book.isbn + '-L.jpg'" class="img-fluid card-img-top" style="height: 70%;">
+            <div class="card pb-4" style="height: 700px;">
+              <img [src]="'https://193.136.62.24/v1/assets/cover/' + book.book.isbn + '-M.jpg'" class="img-fluid card-img-top" style="height: 70%; width: 75%; margin-left: 12.5%;">
               <div class="card-body">
-                <h3 class="card-title">{{book.book.title}}</h3>
+                <h4 class="card-title">{{book.book.title}}</h4>
                 <p class="card-text"> <strong>Ano de publicação:</strong> {{book.book.publishDate}}</p>
                 <p class="card-text"> <strong>Autor:</strong> {{book.book.authors[0].name}}</p>
                 <p class="card-text"> <strong>Stock:</strong> estão disponeis {{book.available}} de {{book.stock}}</p>
