--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,23 @@
 <header>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
+
       <a routerLink="/" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
         <strong>Biblioteca Client</strong>
       </a>
-      <select [(ngModel)]="selectedUser" (change)="updateUser()">
-        <option *ngFor="let option of options" [value]="option.value">{{ option.label }}</option>
-      </select>
+      
+      <div class="d-flex justify-content-center align-items-center">
+
+        <button routerLink="utilizadores" class="btn">
+          <i class="bi bi-person-circle text-white fs-4"></i>
+        </button>
+        <select [(ngModel)]="selectedUser" (change)="updateUser()">
+          <option *ngFor="let option of options" [value]="option.value">{{ option.label }}</option>
+        </select>
+
+      </div>
+
     </div>
   </div>
 </header>
