--- a/src/app/components/detalhes-livro/detalhes-livro.component.html
+++ b/src/app/components/detalhes-livro/detalhes-livro.component.html
@@ -1,7 +1,47 @@
-<div>
-    <h2>{{book.book.title}}</h2>
-    <p>
-        {{book.book.description}}
+<div class="container">
+    <div class="card text-center">
+        <div class="card-header">
+            <h2>{{book.book.title}}</h2>
+        </div>
+        <div class="card-body d-flex">
+            <img class="p-1 bg-dark" [src]="'https://193.136.62.24/v1/assets/cover/' + book.book.isbn + '-L.jpg'">
+            
+        <div class="text-start p-3">          
+            <p><strong>Número de Páginas: </strong>{{book.book.numberOfPages}} pages</p>
+            <p><strong>Realizado por:</strong> {{book.book.authors[0].name}}</p>
+            <p *ngIf="detalhesUser"><strong>Alugado na Biblioteca:</strong> {{book.library.name}}</p>          
+            <p >
+                <strong>Gênero:</strong>
+                <span *ngFor="let subject of book.book.subjects | slice: 0:7">
+                    {{subject}} / 
+                </span>
+            </p>         
+            <p>
+                <strong>Descrição:</strong>
+                {{book.book.description}}
+            </p>
+            <p class="fs-4">
+                <strong>Livros em Estoque: </strong>{{book.stock}}
+            </p>
+            <button *ngIf="book.stock != 0 && book.checkedOut == 0" class="btn btn-primary" style="margin-right: 20px;">
+                CHECKOUT
+            </button>
+            <button *ngIf="book.checkedOut != 0" class="btn btn-success" style="margin-right: 20px;">
+                DEVOLVER LIVRO
+            </button>
+            <button *ngIf="!detalhesUser && book.stock != 0" class="btn btn-danger">
+                REMOVER LIVRO
+            </button>
+            <button *ngIf="book.stock == 0" class="btn btn-primary">
+                ADICIONAR LIVRO
+            </button>
+            
+        </div>
         
-    </p>
+        </div>
+        <div class="card-footer text-muted">
+            <p>Data de publicação do livro: {{book.book.publishDate}}</p>
+            <span>{{book.book.byStatement}}</span>
+        </div>
+      </div>
 </div>
