--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 
 .buttons {
     padding: 10px;
