--- a/src/app/components/detalhes-livro/detalhes-livro.component.html
+++ b/src/app/components/detalhes-livro/detalhes-livro.component.html
@@ -4,7 +4,7 @@
             <h2>{{book.book.title}}</h2>
         </div>
         <div class="card-body d-flex">
-            <img class="p-1 bg-dark" [src]="'https://193.136.62.24/v1/assets/cover/' + book.book.isbn + '-L.jpg'">
+            <img class="p-1 bg-dark" [src]="'https://193.136.62.24/v1/assets/cover/' + book.book.isbn + '-L.jpg'" style="min-width: 300px">
             
         <div class="text-start p-3">          
             <p><strong>Número de Páginas: </strong>{{book.book.numberOfPages}} pages</p>
@@ -23,18 +23,23 @@
             <p class="fs-4">
                 <strong>Livros em Estoque: </strong>{{book.stock}}
             </p>
-            <button *ngIf="book.stock != 0 && book.checkedOut == 0" class="btn btn-primary" style="margin-right: 20px;">
+            <button *ngIf="!detalhesUser && book.checkedOut >= 0 && book.available != 0 " class="btn btn-primary" style="margin-right: 20px;">
                 CHECKOUT
             </button>
-            <button *ngIf="book.checkedOut != 0" class="btn btn-success" style="margin-right: 20px;">
-                DEVOLVER LIVRO
-            </button>
-            <button *ngIf="!detalhesUser && book.stock != 0" class="btn btn-danger">
-                REMOVER LIVRO
-            </button>
-            <button *ngIf="book.stock == 0" class="btn btn-primary">
+            
+            <button *ngIf="!detalhesUser" class="btn btn-primary" (click)="addBook(book.library.id, book.book.isbn)" style="margin-right: 20px;">
                 ADICIONAR LIVRO
             </button>
+
+            <button *ngIf="!detalhesUser && book.stock != 0" class="btn btn-danger" (click)="removeBook(book.library.id, book.book.isbn)">
+                REMOVER LIVRO
+            </button>
+            <p class="alert alert-danger mt-2" *ngIf="alertMessage">Não é possível remover do estoque mais livros dos que estão disponíveis.</p>
+
+            <button *ngIf="detalhesUser && book.checkedOut" class="btn btn-success" style="margin-right: 20px;">
+                DEVOLVER LIVRO
+            </button>
+            
             
         </div>
         
